# IFT729

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/backend/: CMakeLists.txt  game.cpp  game.hpp  logique.cpp  logique.hpp  main.cpp  messages.hpp  player.cpp  player.hpp  server.cpp  server.hpp  timer.hpp  utils.cpp  utils.hpp  value_types.hpp  word_list.hpp  word_list.txt
src/database/: mots.txt
src/front-end/: drawer.css  drawer.html  game.html  guesser.css  guesser.html  index.html  script.js  server.js
src/front-end/utils/: add_game.js  canvas.js  get_game_list.js  init_drawer.js  random_word.js  socket.js  submit_word.js
